# mcp-server

./: .env.example  README.md  main.py  pyproject.toml
src/backend_mcp/: __init__.py  client.py  config.py  server.py
src/backend_mcp/prompts/: __init__.py  order_prompts.py
src/backend_mcp/resources/: __init__.py  menu_resources.py
src/backend_mcp/tools/: __init__.py  analytics_tool.py  customer_tool.py  health_tool.py  menu_tool.py  orders_tool.py  promos_tool.py  reviews_tool.py  staff_tool.py
tests/: test_server.py
