[project]
name = "backend-mcp"
version = "0.1.0"
description = "MCP Server for RMS Backend API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "fastmcp>=2.14.3",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
]

[project.scripts]
backend-mcp = "backend_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
