[project]
name = "backend-mcp"
version = "1.0.0"
description = "MCP Server for Restaurant Backend API"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Pasan Induwara", email = "pasan.samz@gmail.com"}
]
keywords = ["fastapi", "mcp", "restaurant", "backend", "api", "fastmcp", "chatbot"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    "fastapi>=0.128.0",
    "fastmcp>=2.14.3",
    "httpx>=0.28.1",
    "menu>=3.2.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.0.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.0.0",
    "uvicorn[standard]>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.28.1",
    "black>=24.9.1",
    "ruff>=0.1.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.5.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "asyncio: mark test as async",
    "integration: integration tests"
]


[project.scripts]
backend-mcp = "backend_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
